apps/habits/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: habits
spec:
  selector:
    app: metabase
  ports:
  - port: 80
    targetPort: 3000
