apps/habits/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habits
  namespace: habits
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: metabase
      port:
        number: 80
  tls:
  - hosts:
    - habits
